# sw_render

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
benches/: drawing_benchmark.rs
src/: lib.rs  main.rs
src/buffers/: depth.rs  frame.rs  mod.rs
src/common/: camera.rs  mod.rs  primitives.rs  space.rs  traits.rs
src/lights/: directional_light.rs  mod.rs  positional_light.rs  spotlight.rs  traits.rs
src/objects/: mesh.rs  mod.rs  object.rs
src/shaders/: geometry.rs  mod.rs  shading.rs  traits.rs  vertex.rs  vertex_post_processing.rs
src/utils/: winit_app.rs
