[package]
name = "sw-render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
debug = true

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "drawing_benchmark"
harness = false

[dependencies]
minifb = "0.19.3"
ultraviolet = "0.8.1"
rand = "0.8.4"
