cargo-features = ["profile-rustflags"]

[package]
name = "sw-render"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[profile.release-funkey]
inherits = "release"
rustflags = ["-C", "target-cpu=cortex-a7", "-C", "target-feature=+neon,+vfp4", "-Z", "macro-backtrace"]

# [profile.release-local]
# inherits = "release"

[dependencies]
palette = "0.7"
obj-rs = "0.7"
itertools = "0.13"
derive_more = { version = "1", features = ["full"] }
num = "0.4"
approx = "0.5"
glamour = "0.14.0"
softbuffer = "0.4.6"
winit = "0.30.5"

